<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IMApp</string>
    <string name="action_settings">Settings</string>
    <string name="start_secret_session">Start secret session</string>
    <string name="stop_secret_session">Stop secret session</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_login_info">Log in error</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_register_fail">Fail to register</string>
    <!-- Strings for server configuration -->

    <string name="server_address">104.196.96.17</string>
    <string name="port">5222</string>

    <!-- Strings for tabs in MainActivity -->
    <string name="contact_section_title">Contact</string>
    <string name="chat_section_title">Chat</string>

    <!-- String for fragments -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_message">Type Message</string>
    <string name="send">Send</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="valid_password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="type_your_message">Enter msg</string>
    <string name="NoRecent">No recent</string>
    <string name="title_activity_draft">DraftActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Security and Privacy</string>

    <string name="pref_title_cloud_storage">Enable Cloud Storage</string>
    <string name="pref_cloud_storage">cloud_storage</string>
    <string name="pref_description_cloud_storage">Enable storage of messages in the server
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Tuan</string>
    <string name="pref_title_lock_screen">Lock Screen</string>
    <string name="pref_lock_screen">lock_screen</string>
    <string name="pref_description_lock_screen">Lock Screen</string>

    <string name="pref_title_add_friends_to_messages">Lock Screen</string>
    <string-array name="pref_example_list_titles">
        <item>Enable</item>
        <item></item>
        <item>Disable</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
